Made pricing admin configurable